# TorVPN

./: .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  deny.toml  pubspec.yaml  rust-toolchain.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  leak_report.yml
.github/workflows/: ci.yml  release.yml
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/org/tortunnel/tortunnel/: MainActivity.kt  TorTunnelVpnService.kt
assets/data/: exit_countries.json
cli/tortunnel_cli/: Cargo.toml
cli/tortunnel_cli/src/: main.rs  runtime.rs
core/tor_tunnel_core/: Cargo.toml
core/tor_tunnel_core/src/: ffi.rs  lib.rs  models.rs  platform.rs  tor_config.rs
core/tor_tunnel_diagnostics/: Cargo.toml
core/tor_tunnel_diagnostics/src/: lib.rs
core/tor_tunnel_leaktest/: Cargo.toml
core/tor_tunnel_leaktest/src/: lib.rs
core/tor_tunnel_platform_contracts/: Cargo.toml
core/tor_tunnel_platform_contracts/src/: lib.rs
core/tor_tunnel_tor_manager/: Cargo.toml
core/tor_tunnel_tor_manager/src/: bootstrap.rs  control.rs  launch.rs  lib.rs  service.rs
core/tor_tunnel_tunnel_engine/: Cargo.toml
core/tor_tunnel_tunnel_engine/src/: lib.rs  nftables.rs
docs/: ARCHITECTURE.md  LEAK_TEST_MATRIX.md  PLATFORM_ADAPTERS.md  RELEASES.md  THREAT_MODEL.md  VERIFICATION_CHECKLIST.md
docs/architecture/: codebase-map.md
docs/audit/: STABLE_BLOCKERS.md  security-overhaul-2026-06-11.md
docs/audit/product-overhaul/2026-06-11/: audit.md
docs/legal/: WINTUN_REVIEW.md
docs/release/: REPRODUCIBLE_BUILDS.md
helper/tortunnel_helper/: Cargo.toml
helper/tortunnel_helper/src/: main.rs  plan.rs
lib/: main.dart
lib/src/: app.dart
lib/src/core/: android_vpn_client.dart  core_client.dart  core_models.dart  core_seed_data.dart  exit_node_directory.dart  ffi_core_client.dart  mock_core_client.dart
lib/src/features/: activity_page.dart  app_exceptions_page.dart  countries_page.dart  home_page.dart  settings_page.dart  shared.dart  world_map_page.dart
lib/src/l10n/: app_strings.dart
lib/src/theme/: app_theme.dart
linux/: CMakeLists.txt
linux/runner/: my_application.cc
packaging/appimage/: README.md
packaging/debian/: org.tortunnel.helper.policy  tortunnel-helper.service
packaging/flatpak/: org.tortunnel.TorTunnel.yml
packaging/msi/: Product.wxs
packaging/rpm/: tortunnel-helper.service
packaging/windows/: README.md
supply-chain/: README.md
test/: home_responsive_test.dart  widget_test.dart
test/core/: android_vpn_client_test.dart  exit_node_directory_test.dart  ffi_core_client_test.dart  mock_core_client_test.dart
tools/: dev-cargo.ps1  release-gate.ps1
windows/: CMakeLists.txt
windows-service/tortunnel_winsvc/: Cargo.toml
windows-service/tortunnel_winsvc/src/: firewall.rs  main.rs
windows/runner/: Runner.rc  main.cpp
