[package]
name = "tortunnel-cli"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Headless command-line TorTunnel client for servers and headless Linux."

[[bin]]
name = "tortunnel"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
tor_tunnel_core = { path = "../../core/tor_tunnel_core", version = "0.1.0" }
tor_tunnel_tor_manager = { path = "../../core/tor_tunnel_tor_manager", version = "0.1.0" }
