[package]
name = "tor_tunnel_diagnostics"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Redacted local diagnostics for TorTunnel."

[dependencies]
serde = { version = "1.0", features = ["derive"] }
tor_tunnel_platform_contracts = { path = "../tor_tunnel_platform_contracts" }
